@startuml
title UML Class Diagram - High Level System Overview

package MTmotor-jig-mcu-firmware {
  class ArduinoSketch {
    +setup()
    +loop()
  }

  class Configuration {
    +{static} Configuration& GetInstance()
    +void BeginHardware()
    +void ToggleLogs()
    +void ReportFirmwareVersion()
  }

  class ControlSystem {
    +void Begin()
    +void CheckAndProcess()
    -void LogGeneralStatus() const
  }

  Interface InputInterface {
    +virtual inputs::Event Check() = 0
  }

  class Input {
    +inputs::Event Check() override
  }

  class InputManager {
    +common::ControlAction CheckAndProcess(common::ControlMode control_mode)
  }

  class MotorStepper {
    +void Actuate(Configuration::ControlMode control_mode, Configuration::ControlAction control_action, String& status_output)
    +void LogGeneralStatus(Configuration::ControlMode control_mode) const
    +bool homing() const
  }

  class DisplayDotMatrix {
    +void Draw(Configuration::ControlMode control_mode, Configuration::ControlAction control_action, const String& status)
    -template <size_t Size> void DrawScreenItems(const String (&screen_items)[Size])
  }
}

together {
  package ArduinoLog {
    class Logging {
    }
  }

  package LiquidCrystal {
    class LiquidCrystal {
    }
  }

  package MT-rotary-encoder {
    class RotaryEncoder {
    }
  }

  package MT-arduino-momentary-button {
    class MomentaryButton {
    }
  }

  package MT-arduino-stepper-driver {
    class StepperDriver {
    }
  }
}

ArduinoSketch "1" *-- "1" ControlSystem : Has

Configuration <.. Logging

ControlSystem "1" o-- "1" Configuration : Has
ControlSystem "1" *-- "1" RotaryEncoder : Has
ControlSystem "1" *-- "3" MomentaryButton : Has
ControlSystem "1" o-- "4" InputInterface : Has
ControlSystem "1" *-- "1" StepperDriver : Has
ControlSystem "1" *-- "1*" LiquidCrystal.LiquidCrystal: Has
ControlSystem "1" *- "1" InputManager : Has
ControlSystem "1" *- "1" MotorStepper : Has
ControlSystem "1" *- "1" DisplayDotMatrix : Has
ControlSystem <.. Logging

Input <|-- InputInterface : Implements

InputManager "1" o-- "1..*" InputInterface : Has
InputManager <.. Logging

DisplayDotMatrix "1" o-- "1" Configuration : Has
DisplayDotMatrix "1" o-- "1" LiquidCrystal.LiquidCrystal: Has

MotorStepper "1" o-- "1" Configuration : Has
MotorStepper "1" o-- "1" StepperDriver : Has
MotorStepper <.. Logging

@enduml